# cuda_random

./: CMakeLists.txt  README.md  host_random.cu  random.cu  random_gen.cu
